2005-08-06  Romain Francoise  <romain@orebokech.com>

	* message.el (message-user-fqdn): Fix typo in docstring.

2005-08-05  Daiki Ueno <ueno@unixuser.org>

	* mml2015.el (mml2015-pgg-sign): Make sure micalg is correct.

	* pgg-parse.el (pgg-parse-hash-algorithm-alist): Add SHA-2.

2005-08-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-bodies.el (mm-encode-body): Use coding system rather than
	charset to encode text.

	* mm-util.el (mm-find-mime-charset-region): Attempt to reduce the
	number of charsets if utf-8 is available (XEmacs).

2005-08-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-button-valid-localpart-regexp): New variable
	taken from `gnus-button-mid-or-mail-regexp'.
	(gnus-button-mid-or-mail-regexp, gnus-button-alist): Use it.
	(gnus-button-alist): Improve regexp for domain part of the MIDs
	for news:localpart@domain buttons.
	(gnus-button-ctan-directory-regexp): Update.

2005-08-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sieve-manage.el (sieve-manage-interactive-login): Use
	make-local-variable rather than make-variable-buffer-local.
	(sieve-manage-open): Ditto.
	(sieve-manage-authenticate): Ditto.

	* mml.el (mml-generate-mime-1): Make the content type default to
	text/plain if the filename is not specified.

2005-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-uu.el (gnus-uu-save-article): Use insert-buffer-substring
	instead of insert-buffer.

	* message.el (message-yank-original): Ditto; set the mark at the
	end of the yanked message.

2005-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-next-page-1): Reduce the number of
	lines to scroll rather than to stop it.

	* mml.el (mml-generate-default-type): Add doc string.
	(mml-generate-mime-1): Use mm-default-file-encoding or make it
	default to application/octet-stream when determining the content
	type if it is not specified for the part or the mml contents; add
	a comment about mml-generate-default-type.

2005-07-29  Reiner Steib  <Reiner.Steib@gmx.de>
